<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="beinfiny.com.beinfinyconfig.activity.MainActivity">

    <TextView
        android:id="@+id/labelAccueil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/labelAccueil"
        android:textAlignment="center"
        android:textSize="@dimen/labelTitleAccueil" />

    <TextView
        android:id="@+id/labelCarte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginTop="100dp"
        android:layout_row="1"
        android:text="@string/labelCarte"
        android:textSize="@dimen/labelAccueil" />

    <TextView
        android:id="@+id/contentCarte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:textSize="@dimen/contentAccueil" />

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginTop="150dp"
        android:layout_row="3"
        android:text="@string/labelUser"
        android:textSize="@dimen/labelAccueil" />

    <Spinner
        android:id="@+id/spinnerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginStart="50dp"
        android:layout_row="4"
        android:scaleX="2"
        android:scaleY="2" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_marginTop="150dp"
        android:layout_row="5"
        android:backgroundTint="@color/colorBlue"
        android:textSize="@dimen/labelAccueil"
        android:onClick="Associate"
        android:text="@string/btnAssocier"
        android:textColor="@android:color/white" />
</GridLayout>
